--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
-    "@mui/material": "7.3.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "@mui/material": "5.18.0",
+    "@tailwindcss/vite": "4.1.11",
+    "motion": "12.12.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "7.7.1",
-    "tailwindcss": "4.1.11",
-    "@tailwindcss/vite": "4.1.11"
+    "lottie-react": "2.4.1",
+    "react-lottie-player": "2.1.0",
+    "tailwindcss": "4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "9.30.1",
@@ -25,14 +28,14 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.6.0",
-    "autoprefixer": "10.4.21",
+    "autoprefixer": "10.4.19",
     "eslint": "9.30.1",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.3.0",
-    "postcss": "8.5.6",
+    "postcss": "8.4.38",
     "typescript": "5.8.3",
     "typescript-eslint": "8.35.1",
-    "vite": "7.0.4"
+    "vite": "5.4.19"
   }
 }
